# radmodel

./: .gitignore  LICENSE  README.md  batch.sh  launch_radmodel.sh  pyproject.toml  requirements.txt  settings.sh  submit_radmodel.sh
analysis/: movement-tracker.py
data/: ng_cell_assignments.csv  ng_cells.csv  ng_modules.csv  ng_places.csv  ng_schedules.csv  ng_shared_places.csv  places.csv  prisoners.csv  residents.csv  schedule.csv  schedules.csv  test.csv
data/data-generation/: generate_activity_data.py  parameters.py  places.csv  residents.csv  schedule.csv  test_activity_coherence.py  test_coherency.py  visualize_movement.R
notebooks/: test_core_walkthrough.ipynb
params/: module_definition.yaml  radmodel_params.yaml
references/specs/: structural-layout-v1.md
src/genpop/: cli.py  generate.py  generate_layout.py
src/radmodel/: __main__.py  agents.py  common.py  core.py  layout.py  load_layout.py  model.py  population.py  schedule.py
test_data/: module_definition.yaml  ng_residents.csv  ng_schedules.csv  params.yaml  places.csv
tests/: test_core.py  test_layout.py
tests/test_params/: module_no_overflow.yaml
