[project]
name = "radmodel"
description = "radmodel"
version = "0.0.1a"
authors = [
    { name = "Nick Collier", email = "ncollier@anl.gov"    },
    { name = "Aditya Khanna",    email = "aditya_khanna@brown.edu" },
    { name = "Jonathan Ozik",    email = "jozik@anl.gov" }
]
dependencies = [
    "repast4py",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox"
]

docs = [
    "mike",
    "mkdocstrings[python]>=0.18",
    "mkdocs-material"
]

[project.scripts]
radmodel = "radmodel.__main__:main"
genpop = "genpop.cli:cli"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
# exclude = ["Dockerfiles*", "scripts*", "workflow*"]

[tool.ruff]
extend-select = ["Q"]

[tool.pytest.ini_options]
    pythonpath = [
        "src"
    ]
